Edit Fig 2 and 3

--- a/Results.tex
+++ b/Results.tex
@@ -13,52 +13,19 @@ To quantify RecB binding time to DSBs in live \ecoli, we used a Halo-tag fusion 
 
 \subsection*{RecB forms long-lived complexes with DSBs}
 % RecB spot lifetime
-Using the time-lapse data, we built histograms of RecB spot lifetimes at the different ciprofloxacin concentrations (Figure \ref{Fig:lifetimes}B). In the absence of ciprofloxacin, the majority of spots lasted less than 2 seconds. Under increasing ciprofloxacin concentrations, the distribution showed a clear shift towards longer-lived spots, with the histogram at 20 and 30 ng/ml ciprofloxacin displaying a clear "tail" of long-lived events ($>$ 10 sec). Fitting these histograms with a mono-exponential decay model ($y = a.e^{-k.t}$) did not match the experimental data accurately (Supp. Figure \ref{SIFig:monoexp_fits}). In particular, it did not account for the tail of longer-lived spots that formed at high ciprofloxacin concentrations. Fitting with a bi-exponential decay model ($y = a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$) accounted better for the longer-lived RecB spots (Figure \ref{Fig:lifetimes}B). We made sure that the better fit was not solely due to the increased number of fit parameters by computing Akaike's Information Criteria (AIC). The average AIC values for each ciprofloxacin concentration (Supp. Table \ref{SItab:AIC}) confirmed that the additional parameters helped describe the data better. The bi-exponential fit outlined two populations of spots with different lifetimes: a short-lived one, with average lifetimes ranging from 1.4 to 1.7 sec; and a longer-lived one, with average lifetimes ranging from 10 to 14 sec (Table \ref{tab:fit_results}). Even though the short-lived spots always represented a majority of events (over 90\% of the spots), the proportion of long-lived spots increased under higher ciprofloxacin exposure (from 1.4 $\pm$ 0.3\% at 3 ng/ml ciprofloxacin to 5.5 $\pm$ 1.4\% at 30 ng/ml ciprofloxacin).
+Using the time-lapse data, we built histograms of RecB spot lifetimes at the different ciprofloxacin concentrations (Figure \ref{Fig:lifetimes}B). In the absence of ciprofloxacin, the majority of spots lasted less than 2 seconds. Under increasing ciprofloxacin concentrations, the distribution showed a clear shift towards longer-lived spots, with the histogram at 20 and 30 ng/ml ciprofloxacin displaying a clear "tail" of long-lived events ($>$ 10 sec). Fitting these histograms with a mono-exponential decay model ($y = a.e^{-k.t}$) did not match the experimental data accurately (Supp. Figure \ref{SIFig:monoexp_fits}). In particular, it did not account for the tail of longer-lived spots that formed at high ciprofloxacin concentrations. Fitting with a bi-exponential decay model ($y = a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$) accounted better for the longer-lived RecB spots (Figure \ref{Fig:lifetimes}B). We made sure that the better fit was not solely due to the increased number of fit parameters by computing Akaike's Information Criteria (AIC). The average AIC values for each ciprofloxacin concentration (Supp. Table \ref{SItab:AIC}) confirmed that the additional parameters helped describe the data better. The bi-exponential fit outlined two populations of spots with different lifetimes: a short-lived one, with average lifetimes ranging from 1.4 to 1.7 sec; and a longer-lived one, with average lifetimes ranging from 10 to 14 sec (Supp. Table \ref{SItab:fit_results}). Even though the short-lived spots always represented a majority of events (over 90\% of the spots), the proportion of long-lived spots increased under higher ciprofloxacin exposure (from 1.4 $\pm$ 0.3\% at 3 ng/ml ciprofloxacin to 5.5 $\pm$ 1.4\% at 30 ng/ml ciprofloxacin).
 
 \begin{figure*}[htbp]
     \centering
     \includegraphics[width=.8\textwidth]{Figures/Fig2_RecB_lifetime.pdf}
-    \caption{RecB spot lifetimes under ciprofloxacin exposure. \textbf{(A)} Example kymographs (2-sec interval, 100 sec total) of cells containing short- and long-lived RecB spots. \textbf{(B)} RecB spot lifetime histograms at 0, 3, 10, 20 and 30 ng/ml ciprofloxacin (bars), fitted with a bi-exponential decay model (black line, fit components shown as dashed lines). \ncells{66,764}. \nspots{170,138}. \textbf{(C)} RecB spot lifetime histograms (bars) for cells over-expressing the Gam protein, fitted with a bi-exponential decay model (black line, fit components shown as dashed lines). \ncells{8,812}. \nspots{18,698}. \textbf{(D)} Probability of a spot corresponding to a DSB-bound RecB molecule. Black dots show averages for individual datasets; the black line is the average between them, and the red dashed line shows the smallest lifetime at which RecB spots have a 95\% probability of being DSB-bound. \ncells{8,812}. \nspots{18,698}.}
+    \caption{RecB spot lifetimes under ciprofloxacin exposure. \textbf{(A)} Example kymographs (2-sec interval, 100 sec total) of cells containing short- and long-lived RecB spots. \textbf{(B)} RecB spot lifetime histograms at 0, 3, 10, 20 and 30 ng/ml ciprofloxacin (bars), fitted with a bi-exponential decay model (black line, fit components shown as dashed lines). \ncells{66,764}. \nspots{170,138}. \textbf{(C)} Scheme of RecBCD bound by the Gam protein of phage $\lambda$ (subunits S1 and S2). \textbf{(D)} RecB spot lifetime histograms (bars) for cells over-expressing the Gam protein, fitted with a bi-exponential decay model (black line, fit components shown as dashed lines). \ncells{8,812}. \nspots{18,698}. \textbf{(E)} Proportion of long-lived RecB spots as a function of ciprofloxacin concentration, for wild-type (WT) cells, and cells over-expressing the Gam protein. Violin plots show single-cell distributions, box plots show the median and interquartile range. Statistically significant differences to the WT, no ciprofloxacin condition (Tukey's HSD test) are shown as follows: ns, non-significant; *, p<0.05; **, p<0.01; ***, p<0.001; ****, p<0.0001 \ncells{66,764}. \nspots{170,138}.}
     \label{Fig:lifetimes}
 \end{figure*}
 
-\begin{table}[htbp]
-    \centering
-    \caption{Parameters derived from the spot lifetime histogram fits (Figures \ref{Fig:lifetimes}B and \ref{Fig:lifetimes}C). The lifetime was calculated as the inverse of the fitted dissociation rate. Values are given as the median $\pm$ standard deviation over at least 3 independent datasets. \ncells{66,764}. \nspots{170,138}}
-    \begin{tabular}{lllll}
-        \toprule
-        &  &  & \makecell{Lifetime\\(sec)} & \makecell{Population\\(\%)} \\
-        Strain & \makecell{Cipro.} & Type &  &  \\
-        \midrule
-        \multirow[t]{10}{*}{WT} & \multirow[t]{2}{*}{0 ng/ml} & Short & 1.4 $\pm$ 0.2 & 98.2 $\pm$ 1.0 \\
-        &  & Long & 9.5 $\pm$ 9.7 & 1.8 $\pm$ 1.0 \\
-        \cline{2-5}
-        & \multirow[t]{2}{*}{3 ng/ml} & Short & 1.5 $\pm$ 0.1 & 98.6 $\pm$ 0.3 \\
-         &  & Long & 10.5 $\pm$ 1.3 & 1.4 $\pm$ 0.3 \\
-        \cline{2-5}
-        & \multirow[t]{2}{*}{10 ng/ml} & Short & 1.7 $\pm$ 0.2 & 97.6 $\pm$ 0.6 \\
-        &  & Long & 13.7 $\pm$ 2.3 & 2.4 $\pm$ 0.6 \\
-        \cline{2-5}
-        & \multirow[t]{2}{*}{20 ng/ml} & Short & 1.6 $\pm$ 0.2 & 96.6 $\pm$ 0.8 \\
-        &  & Long & 11.8 $\pm$ 2.1 & 3.4 $\pm$ 0.8 \\
-        \cline{2-5}
-        & \multirow[t]{2}{*}{30 ng/ml} & Short & 1.7 $\pm$ 0.2 & 94.5 $\pm$ 1.4 \\
-        &  & Long & 13.3 $\pm$ 2.2 & 5.5 $\pm$ 1.4 \\
-        \midrule
-        \multirow[t]{4}{*}{Gam} & \multirow[t]{2}{*}{0 ng/ml} & Short & 1.7 $\pm$ 0.2 & 99.2 $\pm$ 0.4 \\
-        &  & Long & 15.5 $\pm$ 9.1 & 0.8 $\pm$ 0.4 \\
-        \cline{2-5}
-        & \multirow[t]{2}{*}{30 ng/ml} & Short & 1.5 $\pm$ 0.1 & 98.2 $\pm$ 0.9 \\
-        & & Long & 8.2 $\pm$ 1.8 & 1.8 $\pm$ 0.9 \\
-        \bottomrule
-        \end{tabular}
-    \label{tab:fit_results}
-\end{table}
-
 % Gam
-To determine whether short- or long-lived spots resulted from RecB binding to DSBs, we measured RecB spot lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind to the RecBCD complex by mimicking DNA double-strand ends \cite{Wilkinson2016}, and its overexpression is therefore expected to prevent RecBCD binding to DSBs. Accordingly, cells that expressed Gam and were exposed to high ciprofloxacin (30 ng/ml) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}), indicating that most cells did not induce the SOS response, as a result of the inability of the RecBCD-Gam complex to bind to DSBs and load RecA. The resulting RecB spot lifetimes showed a similar distribution to the one obtained in the absence of ciprofloxacin (Supp. Figure \ref{SIFig:Gam_RecB_lifetimes_vs_WT}). This was confirmed by fitting the histogram with our bi-exponential decay model (Figure \ref{Fig:lifetimes}C), which found a proportion of long-lived spots in the presence of 30 ng/ml ciprofloxacin (1.8 $\pm$ 0.9\%, Table \ref{tab:fit_results}) equivalent to wild-type cells that were not exposed to ciprofloxacin (1.8 $\pm$ 1\%). The residual amount of long-lived RecB spots in the presence of Gam could be a result of residual DSB binding despite the presence of Gam. This residual binding could also explain the small increase in cell length observed in Gam-expressing cells under 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:Gam_cell_length}). Since Gam overexpression prevents RecB binding to DSBs, and specifically caused long-lived spots to disappear, we conclude that long-lived spots correspond to RecB molecules bound to a DSB (and we will refer to them as DSB-bound RecB throughout this article). Given that under Gam overexpression, 95\% of RecB spots had a lifetime shorter than 10 sec (Supp. Figure \ref{SIFig:proba_DSB_bound}), we considered any spot with a lifetime over 10 sec to be a DSB-bound RecB molecule. The appearance of short-lived spots in the presence of Gam is likely a result of a combination of short-lived DNA interactions and slow, confined diffusion of the RecBCD-Gam-Halo complex (Supp. Note \ref{note:spurious_spots} and Supp. Figure \ref{SIFig:displacement_simul}).
+To determine whether short- or long-lived spots resulted from RecB binding to DSBs, we measured RecB spot lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind to the RecBCD complex by mimicking DNA double-strand ends \cite{Wilkinson2016} (Figure \ref{Fig:lifetimes}C), and its overexpression is therefore expected to prevent RecBCD binding to DSBs. Accordingly, cells that expressed Gam and were exposed to high ciprofloxacin (30 ng/ml) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}), indicating that most cells did not induce the SOS response, as a result of the inability of the RecBCD-Gam complex to bind to DSBs and load RecA. The resulting RecB spot lifetimes showed a similar distribution to the one obtained in the absence of ciprofloxacin (Supp. Figure \ref{SIFig:Gam_RecB_lifetimes_vs_WT}). This was confirmed by fitting the histogram with our bi-exponential decay model (Figure \ref{Fig:lifetimes}D), which found a proportion of long-lived spots in the presence of 30 ng/ml ciprofloxacin (1.8 $\pm$ 0.9\%, Figure \ref{Fig:lifetimes}E and Supp. table \ref{SItab:fit_results}) equivalent to wild-type cells that were not exposed to ciprofloxacin (1.8 $\pm$ 1\%). The residual amount of long-lived RecB spots in the presence of Gam could be a result of residual DSB binding despite the presence of Gam. This residual binding could also explain the small increase in cell length observed in Gam-expressing cells under 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:Gam_cell_length}). Since Gam overexpression prevents RecB binding to DSBs, and specifically caused long-lived spots to disappear, we conclude that long-lived spots correspond to RecB molecules bound to a DSB (and we will refer to them as DSB-bound RecB throughout this article). Given that under Gam overexpression, 95\% of RecB spots had a lifetime shorter than 10 sec (Supp. Figure \ref{SIFig:proba_DSB_bound}), we considered any spot with a lifetime over 10 sec to be a DSB-bound RecB molecule. The appearance of short-lived spots in the presence of Gam is likely a result of a combination of short-lived DNA interactions and slow, confined diffusion of the RecBCD-Gam-Halo complex (Supp. Note \ref{note:spurious_spots} and Supp. Figure \ref{SIFig:displacement_simul}).
 
-Using the Gam protein allowed us to identify DSB-bound RecB molecules as the longer-lived population in our bi-exponential fits of the RecB spot lifetime histograms. We determined that when it processes a DSB, RecB stays bound to it for 10 to 14 seconds on average, regardless of the ciprofloxacin concentration (Table \ref{tab:fit_results}). This is consistent with processing of DSBs by RecBCD taking place independently of the number of DSBs in the cell. In addition, to test whether the duration of ciprofloxacin exposure affected spot lifetimes, we performed separate fits at 15 min intervals for cells exposed to 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:RecB_lifetimes_timepoints}). The RecB spot lifetimes obtained were consistent with those reported in Table \ref{tab:fit_results} (10-15 sec for long-lived spots, and 1.5-2 sec for short-lived spots), indicating that RecB binding was not affected by the duration of ciprofloxacin exposure. This suggests that as expected, the presence of additional damage due to continuous exposure to ciprofloxacin does not influence the processing of DSBs by RecBCD
+Using the Gam protein allowed us to identify DSB-bound RecB molecules as the longer-lived population in our bi-exponential fits of the RecB spot lifetime histograms. We determined that when it processes a DSB, RecB stays bound to it for 10 to 14 seconds on average, regardless of the ciprofloxacin concentration (Supp. Table \ref{SItab:fit_results}). This is consistent with processing of DSBs by RecBCD taking place independently of the number of DSBs in the cell. In addition, to test whether the duration of ciprofloxacin exposure affected spot lifetimes, we performed separate fits at 15 min intervals for cells exposed to 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:RecB_lifetimes_timepoints}). The RecB spot lifetimes obtained were consistent with those reported in Supp. Table \ref{SItab:fit_results} (10-15 sec for long-lived spots, and 1.5-2 sec for short-lived spots), indicating that RecB binding was not affected by the duration of ciprofloxacin exposure. This suggests that as expected, the presence of additional damage due to continuous exposure to ciprofloxacin does not influence the processing of DSBs by RecBCD
 
 \subsection*{RecB dissociation time depends on its exonuclease activity}
 % RecB binding time in the mutants
@@ -94,8 +61,8 @@ Since the duration of the RecB-DSB interaction was unaffected by the amount of D
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=.4\textwidth]{Figures/Fig3_RecB_recruitment.pdf}
-    \caption{Recruitment of RecB to DSBs. \textbf{(A)} Recruitment rate of RecB to DSBs per cell at different ciprofloxacin concentrations. \ncells{66,764}. \nspots{170,138}. \textbf{(B)} Recruitment rate of RecB to DSBs per cell for the \dreca\ and \geneteneighty\ mutants. \ncells{23,540}. \nspots{99,891}. For both panels, violin plots show single-cell distributions, box plots show the median and interquartile range. Statistically significant differences (Tukey's HSD test) are shown as follows: ns, non-significant; *, p<0.05; **, p<0.01; ***, p<0.001; ****, p<0.0001}
+    \includegraphics[width=.35\textwidth]{Figures/Fig3_RecB_recruitment.pdf}
+    \caption{Recruitment of RecB to DSBs. \textbf{(A)} Recruitment rate of RecB to DSBs per cell at different ciprofloxacin concentrations. Statistically significant differences are shown relative to the no ciprofloxacin condition. \ncells{66,764}. \nspots{170,138}. \textbf{(B)} Recruitment rate of RecB to DSBs per cell for the \dreca\ and \geneteneighty\ mutants. \ncells{23,540}. \nspots{99,891}. For both panels, violin plots show single-cell distributions, box plots show the median and interquartile range. p-values from Tukey's HSD test are shown as follows: ns, non-significant; *, p<0.05; **, p<0.01; ***, p<0.001; ****, p<0.0001}
     \label{Fig:recruitment}
 \end{figure}
 
