--- a/Discussion.tex
+++ b/Discussion.tex
@@ -1,7 +1,7 @@
 \section*{Discussion}
 
 \subsection*{RecB dissociation does not depend on subsequent repair steps}
-In this work, we used imaging of RecB bound to DSBs to elucidate key aspects of RecBCD's processing of DSBs in vivo, focusing on how long RecBCD remains bound to DNA after DSB recognition and whether this binding time depends on the level of DNA damage. We found that in wild-type \ecoli, RecB stays bound to DSBs for 10 to 15 seconds on average (Table \ref{tab:fit_results}), independently of the concentration of ciprofloxacin. Additionally, we investigated whether RecA might play a role in promoting RecBCD dissociation from DNA. Imaging RecB in a \dreca\ mutant indicated that this is not the case, and that RecB dissociation occurs independently of RecA loading (Table \ref{tab:fit_mutants}). Interestingly, the \geneteneighty\ mutant had a reduced dissociation rate compared to wild-type cells, which highlights the importance of RecB's exonuclease activity in the process and the possibility that digestion of the unwound DNA strands before Chi recognition is a pre-requisite for RecBCD dissociation.
+In this work, we used imaging of RecB bound to DSBs to elucidate key aspects of RecBCD's processing of DSBs in vivo, focusing on how long RecBCD remains bound to DNA after DSB recognition and whether this binding time depends on the level of DNA damage. We found that in wild-type \ecoli, RecB stays bound to DSBs for 10 to 15 seconds on average (Supp. Table \ref{SItab:fit_results}), independently of the concentration of ciprofloxacin. Additionally, we investigated whether RecA might play a role in promoting RecBCD dissociation from DNA. Imaging RecB in a \dreca\ mutant indicated that this is not the case, and that RecB dissociation occurs independently of RecA loading (Table \ref{tab:fit_mutants}). Interestingly, the \geneteneighty\ mutant had a reduced dissociation rate compared to wild-type cells, which highlights the importance of RecB's exonuclease activity in the process and the possibility that digestion of the unwound DNA strands before Chi recognition is a pre-requisite for RecBCD dissociation.
 
 \subsection*{RecB can be used as a proxy to quantify DSB formation \emph{in vivo}}
 Given RecBCD's high affinity for DSBs \emph{in vivo} and our ability to detect its binding to DSBs, the system is a useful tool to detect the presence of DSBs in \ecoli. Our experiments allowed us to estimate the number of recruitments of RecB to DSBs per hour, under different ciprofloxacin concentrations (Figure \ref{Fig:recruitment}A), and in the \dreca\ and \geneteneighty\ mutants (Figure \ref{Fig:recruitment}B). In the absence of ciprofloxacin, we estimated that 1.3 $\pm$ 1.1 RecB molecules are recruited to DSBs per hour. A previous study had estimated that 18\% of cells generated an endogenous DSB per cell cycle \cite{Sinha2018}, for a cell cycle length of 20 min (shorter than the 35 min cell cycle time in our experiments). This would correspond to a rate of $\sim$0.6 DSBs per hour, a lower value than our own estimate. This discrepancy could be due to the significant differences in the methods and growth conditions used to produce these estimates.
