--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -17,7 +17,7 @@ All experimental photobleaching curves were well-fitted by a mono-exponential de
 
 \section{Formation of RecB spots by the freely diffusing RecBCD-Halo-Gam complex}
 \label{note:spurious_spots}
-In cells that overexpress the Gam protein, RecB is expected to be unable to bind DSBs. Even though Gam overexpression prevents the apparition of long-lived RecB spots under exposure to ciprofloxacin, short-lived RecB spots remain present (Figure \ref{Fig:lifetimes}C, Supp. Figure \ref{SIFig:Gam_RecB_lifetimes_vs_WT} and Table \ref{tab:fit_results}). To understand how RecB spots can be formed in the absence of DSB binding, we simulated the expected displacements of a RecBCD-Halo-Gam complex according to the distribution of single displacements for a random 2D walk:
+In cells that overexpress the Gam protein, RecB is expected to be unable to bind DSBs. Even though Gam overexpression prevents the apparition of long-lived RecB spots under exposure to ciprofloxacin, short-lived RecB spots remain present (Figure \ref{Fig:lifetimes}C, Supp. Figure \ref{SIFig:Gam_RecB_lifetimes_vs_WT} and Supp. Table \ref{SItab:fit_results}). To understand how RecB spots can be formed in the absence of DSB binding, we simulated the expected displacements of a RecBCD-Halo-Gam complex according to the distribution of single displacements for a random 2D walk:
 \begin{equation}
     P(r) = \dfrac{r}{2D_i t}e^{-\dfrac{r^2}{4D_i t}}
 \end{equation}
@@ -163,6 +163,39 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \label{SItab:AIC}
 \end{supptable}
 
+\begin{supptable}[htbp]
+    \centering
+    \caption{Parameters derived from the spot lifetime histogram fits (Figures \ref{Fig:lifetimes}B and \ref{Fig:lifetimes}C). The lifetime was calculated as the inverse of the fitted dissociation rate. Values are given as the median $\pm$ standard deviation over at least 3 independent datasets. \ncells{66,764}. \nspots{170,138}}
+    \begin{tabular}{lllll}
+        \toprule
+        &  &  & \makecell{Lifetime\\(sec)} & \makecell{Population\\(\%)} \\
+        Strain & \makecell{Cipro.} & Type &  &  \\
+        \midrule
+        \multirow[t]{10}{*}{WT} & \multirow[t]{2}{*}{0 ng/ml} & Short & 1.4 $\pm$ 0.2 & 98.2 $\pm$ 1.0 \\
+        &  & Long & 9.5 $\pm$ 9.7 & 1.8 $\pm$ 1.0 \\
+        \cline{2-5}
+        & \multirow[t]{2}{*}{3 ng/ml} & Short & 1.5 $\pm$ 0.1 & 98.6 $\pm$ 0.3 \\
+         &  & Long & 10.5 $\pm$ 1.3 & 1.4 $\pm$ 0.3 \\
+        \cline{2-5}
+        & \multirow[t]{2}{*}{10 ng/ml} & Short & 1.7 $\pm$ 0.2 & 97.6 $\pm$ 0.6 \\
+        &  & Long & 13.7 $\pm$ 2.3 & 2.4 $\pm$ 0.6 \\
+        \cline{2-5}
+        & \multirow[t]{2}{*}{20 ng/ml} & Short & 1.6 $\pm$ 0.2 & 96.6 $\pm$ 0.8 \\
+        &  & Long & 11.8 $\pm$ 2.1 & 3.4 $\pm$ 0.8 \\
+        \cline{2-5}
+        & \multirow[t]{2}{*}{30 ng/ml} & Short & 1.7 $\pm$ 0.2 & 94.5 $\pm$ 1.4 \\
+        &  & Long & 13.3 $\pm$ 2.2 & 5.5 $\pm$ 1.4 \\
+        \midrule
+        \multirow[t]{4}{*}{Gam} & \multirow[t]{2}{*}{0 ng/ml} & Short & 1.7 $\pm$ 0.2 & 99.2 $\pm$ 0.4 \\
+        &  & Long & 15.5 $\pm$ 9.1 & 0.8 $\pm$ 0.4 \\
+        \cline{2-5}
+        & \multirow[t]{2}{*}{30 ng/ml} & Short & 1.5 $\pm$ 0.1 & 98.2 $\pm$ 0.9 \\
+        & & Long & 8.2 $\pm$ 1.8 & 1.8 $\pm$ 0.9 \\
+        \bottomrule
+        \end{tabular}
+    \label{SItab:fit_results}
+\end{supptable}
+
 % Cell length under Gam over-expression, 0 and 30 ng/mL cipro
 \begin{suppfigure*}[htbp]
     \begin{center}
@@ -186,7 +219,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=.4\textwidth]{SI_Figures/Proba_DSB_bound.pdf}
     \end{center}
-    \caption{Histogram of expected displacements for a molecule diffusing at 1 \ums\ over a 500 ms frame time.}
+    \caption{Probability of a spot corresponding to a DSB-bound RecB molecule. Black dots show averages for individual datasets; the black line is the average between them, and the red dashed line shows the smallest lifetime at which RecB spots have a 95\% probability of being DSB-bound. \ncells{8,812}. \nspots{18,698}.}
     \label{SIFig:proba_DSB_bound}
 \end{suppfigure*}
 
