Edits by Meriem on Intro

--- a/Article.tex
+++ b/Article.tex
@@ -23,8 +23,8 @@
 
 \begin{document}
 
-\title{Single molecule imaging of RecB \emph{in vivo} reveals dynamics of DNA Double Strand Break repair in \emph{Escherichia coli}}
-\shorttitle{Single molecule imaging of RecB \emph{in vivo} reveals dynamics of DSB repair in \ecoli}
+\title{Spatio-temporal coordination of the DNA Double Strand Break repair machinery in \emph{Escherichia coli}}
+\shorttitle{Spatio-temporal dynamics of the DSB repair machinery in \ecoli}
 
 \author[1]{Daniel Thédié}
 \author[1,2]{Alessia Lepore}
@@ -34,7 +34,7 @@
 
 \affil[1]{Institute of Cell Biology, University of Edinburgh, Edinburgh, UK}
 \affil[2]{Laboratory for Optics and Biosciences, \'Ecole Polytechnique, Institut Polytechnique de Paris, Palaiseau, France}
-\affil[3]{Ecole Normale Supérieure, Paris-Saclay, France}  % ENS Saclay, to be checked by Meriem
+\affil[3]{Laboratoire de Biologie et Pharmacologie Appliquée, CNRS,Ecole Normale Supérieure Paris-Saclay, UMR 8113, Gif-sur-Yvette, France}  % ENS Saclay, to be checked by Meriem
 
 \maketitle
 
